# FRDI

./: .gitignore  CMakeLists.txt  README.md  detect_landmarks.py  fa_requirements.txt  main.cpp
include/: Eigen.h  constraint.hpp  hd5_utils.hpp  landmarks.h  model.h  obj_loader.h  preprocessor.h
src/: landmarks.cpp  model.cpp  preprocessor.cpp
